--- a/src/main/bower.json
+++ b/src/main/bower.json
@@ -10,7 +10,7 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "angular-websocket": "^2.0.0",
+    "ng-websocket": "0.2.1",
     "html5-boilerplate": "^5.3.0"
   }
 }
